--- a/main.html
+++ b/main.html
@@ -3,10 +3,25 @@
 <html>
 
 <head>
+	<style>
+		main.accio{
+			width:150px;
+			height:150px;
+			background color:#000000;
+		}
+		hello-accio{
+			text color:#ffffff;
+			left margin:32px;
+			padding: 10px;
+		}
+	</style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<main class="accio" id="job">
+        <p class="hello-accio">Hello Accio Job</p>
+	</main>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
