--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 			height:150px;
 			background color:#000000;
 		}
-		.hello-accio{
+		p.hello-accio{
 			text color:#ffffff;
 			left margin:32px;
 			padding: 10px;
