--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
 		main.accio{
 			width:150px;
 			height:150px;
-			background color:#000000;
+			background-color:#000000;
 		}
 		p.hello-accio{
-			text color:#ffffff;
-			left margin:32px;
+			text-color:#ffffff;
+			left-margin:32px;
 			padding: 10px;
 		}
 	</style>
