--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 			background-color:#000000;
 		}
 		p.hello-accio{
-			text-color:#ffffff;
-			left-margin:32px;
+			color:#ffffff;
+			margin-left:32px;
 			padding: 10px;
 		}
 	</style>
